--- a/data/gem-new/default/skeleton/GEM_NAME.gemspec.erb
+++ b/data/gem-new/default/skeleton/GEM_NAME.gemspec.erb
@@ -5,14 +5,14 @@ Gem::Specification.new do |s|
   s.version                   = <%= version.to_s.inspect %>
   s.required_rubygems_version = Gem::Requirement.new("> 1.3.1")
   s.authors                   = <%= author.inspect %>
-  s.date                      = <%= Time.now.strftime("%Y-%m-%d").inspect %>
+  s.date                      = <%= date.inspect %>
   s.description               = <<-DESCRIPTION.gsub(/^    /, '').chomp
 <%= description && description.gsub(/^/,'    ') %>
   DESCRIPTION
   s.summary                   = <<-SUMMARY.gsub(/^    /, '').chomp
 <%= summary && summary.gsub(/^/,'    ') %>
   SUMMARY
-  s.email                     = "stefan.rusterholz@gmail.com"
+  s.email                     = <%= email.inspect %>
   s.files                     =
     Dir['bin/**/*'] +
     Dir['lib/**/*'] +
