Replaced content of lib/REQUIRE_NAME.rb.erb in default skeleton with saner content.

--- a/data/gem-new/default/skeleton/lib/REQUIRE_NAME.rb.erb
+++ b/data/gem-new/default/skeleton/lib/REQUIRE_NAME.rb.erb
@@ -1,24 +1,12 @@
 # encoding: utf-8
 
-Gem::Specification.new do |s|
-  s.name                      = "gem-new"
-  s.version                   = "0.1.0"
-  s.required_rubygems_version = Gem::Requirement.new("> 1.3.1")
-  s.authors                   = ["Stefan Rusterholz"]
-  s.date                      = "2011-06-10"
-  s.default_executable        = "baretest"
-  s.description               = <<-DESCRIPTION.chomp
-    Gem-new is a gem command plugin that allows you to easily create a new gem.
-  DESCRIPTION
-  s.summary                   = <<-SUMMARY.chomp
-    Create new gems easily
-  SUMMARY
-  s.email                     = "stefan.rusterholz@gmail.com"
-  s.files                     = %w[
-    lib/rubygems_plugin.rb
-  ]
-  s.homepage                  = "http://github.com/apeiros/gem-new"
-  s.require_paths             = %w[lib]
-  s.rubygems_version          = "1.3.1"
-  s.specification_version     = 3
+
+
+require '<%= require_name %>/version'
+
+
+
+# <%= namespace %>
+# <%= description %>
+module <%= namespace %>
 end
