--- a/data/gem-new/default/skeleton/lib/REQUIRE_NAME.rb.erb
+++ b/data/gem-new/default/skeleton/lib/REQUIRE_NAME.rb.erb
@@ -6,7 +6,7 @@ require '<%= require_name %>/version'
 
 
 
-# <%= namespace %>
-# <%= description %>
+# <%= namespace.chomp %>
+<%= description.gsub(/^/, '# ').chomp %>
 module <%= namespace %>
 end
