--- a/data/gem-new/default/skeleton/GEM_NAME.gemspec.erb
+++ b/data/gem-new/default/skeleton/GEM_NAME.gemspec.erb
@@ -4,8 +4,9 @@ Gem::Specification.new do |s|
   s.name                      = <%= gem_name.inspect %>
   s.version                   = <%= version.to_s.inspect %>
   s.required_rubygems_version = Gem::Requirement.new("> 1.3.1")
+  # According to Eric Hodel (Rubygems maintainer), you should generally not set this value
+  # s.date                      = <%= date.inspect %>
   s.authors                   = <%= author.inspect %>
-  s.date                      = <%= date.inspect %>
   s.description               = <<-DESCRIPTION.gsub(/^    /, '').chomp
 <%= description && description.gsub(/^/,'    ') %>
   DESCRIPTION
@@ -24,6 +25,10 @@ Gem::Specification.new do |s|
       README.markdown
     ]
   s.require_paths             = %w[lib]
+  if File.directory?('bin') then
+    executables = Dir.chdir('bin') { Dir.glob('**/*').select { |f| File.executable?(f) } }
+    s.executables = executables unless executables.empty?
+  end
   s.rubygems_version          = "1.3.1"
   s.specification_version     = 3
 end
