Fixed an issue with the module declaration starting within the comment section.

--- a/data/gem-new/default/skeleton/lib/REQUIRE_NAME.rb.erb
+++ b/data/gem-new/default/skeleton/lib/REQUIRE_NAME.rb.erb
@@ -7,6 +7,6 @@ require '<%= require_name %>/version'
 
 
 # <%= namespace.chomp %>
-<%= description.gsub(/^/, '# ').chomp %>
+<%= description.gsub(/\n*\z/, '').gsub(/^/, '# ')+"\n" %>
 module <%= namespace %>
 end
